--- a/index.css
+++ b/index.css
@@ -1,10 +1,9 @@
 body {
-/* 	background: linear-gradient(to right, blue, purple); */
+	background: linear-gradient(to right, blue, purple);
 }
 .container{
 	min-height: 100vh;
 	padding: 50px;
-	background: linear-gradient(to right, blue, purple);
 }
 .to-do{
 	width: 100%;
@@ -46,8 +45,7 @@ h3{
 	color: red;
 }
 table{
-/*	border: solid grey 1px;
-*/	width: 450px;
+	width: 450px;
 	max-width: 450px;
 	text-align: left;
 	font-size: 1.5em;
@@ -65,6 +63,8 @@ table{
 }
 th {
 	width: 500px;
+	word-break: break-all;
+	padding-right: 10px;
 }
 th span {
 	position: absolute;
